# gamecube

IOUSBLib/: .Makefile.swp  Makefile  gamecube  (+1 more)
SDL/: .Makefile.swo  .main.cpp.swo  CMakeLists.txt
SDL/Builds/: CMakeCache.txt  cmake_install.cmake
SDL/Builds/CMakeScripts/: ReRunCMake.make
SDL/Builds/Debug/: game
SDL/Builds/JUCE/: JUCEExportConfig.cmake  cmake_install.cmake
SDL/Builds/JUCE/CMakeScripts/: ReRunCMake.make
SDL/Builds/JUCE/JUCE.xcodeproj/: project.pbxproj
SDL/Builds/JUCE/modules/: cmake_install.cmake
SDL/Builds/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  cmake_install.cmake
SDL/Builds/JUCE/tools/CMakeScripts/: ReRunCMake.make
SDL/Builds/SDL2/: cmake_install.cmake  cmake_uninstall.cmake
SDL/Builds/SDL2/CMakeScripts/: ReRunCMake.make
SDL/Builds/SDL2/Debug/: libSDL2-2.0d.0.dylib
SDL/Builds/SDL2/SDL2.xcodeproj/: project.pbxproj
SDL/Builds/SDL2/include-config-debug/: SDL_config.h
SDL/Builds/game.xcodeproj/: project.pbxproj
SDL/JUCE/: CMakeCache.txt  cmake_install.cmake
SDL/JUCE/tools/: JUCEToolsExport.cmake  cmake_install.cmake
SDL/JUCE/tools/modules/: cmake_install.cmake
SDL/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake
SDL/make_file/: Makefile  gamecube
SDL/src/: main.cpp
glfw/: CMakeLists.txt  gamecontrollerdb.txt  mappings.txt
glfw/JUCE/: Makefile
glfw/JUCE/modules/: Makefile  cmake_install.cmake
glfw/JUCE/tools/: CMakeCache.txt  Makefile
glfw/JUCE/tools/modules/: Makefile
glfw/include/: actions.h  controller.h  file.h  game.h
glfw/mappings/: gamecubemapping.txt
glfw/src/: actions.cpp  controller.cpp  file.cpp  game.cpp  main.cpp
(+12 files in other folders)
